# Frog-Jump-Platformer

./: CMakeLists.txt  README.md
Data/: CREDITS.txt
Data/Levels/: Custom.txt  Level 1.txt  Level 2.txt  Level 3.txt  Level 4.txt
src/: Game.cpp  Game.h  Gameplay.cpp  Gameplay.h  GameplayAudio.cpp  GameplayAudio.h  GameplayMenu.cpp  GameplayMenu.h  Gamestate.h  Level.h  main.cpp
src/Gameobjects/: Block.cpp  Block.h  BlockType.h  Collectible.cpp  Collectible.h  CollectibleType.h  Door.cpp  Door.h  Gameobject.cpp  Gameobject.h  Mushroom.cpp  Mushroom.h  Player.cpp  Player.h  SpikedBall.cpp  SpikedBall.h  Tittle.cpp  Tittle.h
